update - fix login - add threadas

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
             <button onclick="loadAccount()" id="loadAccount" class="btn btn-primary">Load Account</button>
         </div>
 
+
+          <!-- Thời gian gõ tay -->
+          <div class="mb-3">
+            <label class="form-label">Số luồng chạy</label>
+            <div class="row">
+                <div class="col-md-6">
+                    <input type="number" value="2" id="threads" class="form-control" placeholder="Min">
+                </div>
+            
+            </div>
+        </div>
         
 
         <!-- Thời gian gõ tay -->
